# sovi

./: .env  .env.example  .gitattributes  .gitignore  .scratch-pad.md  AGENTS.md  Makefile  docker-compose.yml  pyproject.toml  sovi_master_list.md
.beads/: issues.jsonl  metadata.json
config/: com.sovi.dashboard.plist
config/niches/: ai_storytelling.yaml  diy_home.yaml  fitness.yaml  (+10 more)
db/: schema.sql
docs/: architecture.md  auth-system.md  cellular-ip-strategy.md  cli-reference.md  content-pipeline.md  dashboard-api.md  database-schema.md  device-automation.md  email-creation-pipeline.md  email-strategy.md  event-system.md  grpc-protocol.md  index.md  infrastructure-setup.md  tooling-plan.md  warming-strategy.md
migrations/: 001_initial_schema.sql  002_continuous_aggregates.sql  003_scheduler_events.sql  004_identity_guardrails.sql  005_device_roles.sql  006_hooks_unique_constraint.sql  007_bulletproof_airplane_mode.sql
proto/: device_service.proto
research/: content-strategy-and-workflows.md
scripts/: batch_proton_signup.py  batch_social_accounts.py  check_accounts.py  check_db.py  clear_safari.py  com.sovi.scheduler.plist  create_emails_batch.py  create_social_accounts.py  mailcom_creator.py  monitor_mailcom.py  provision_studio.sh  register_batch.py  setup_keys.sh  test_assembly.py  test_hybrid_registration.py  test_mailcom.py  test_proxy_registration.py  test_rate_limit.py  tiktok_signup_flow.py
tests/: conftest.py  test_account_creator.py  test_airplane_guard.py  test_app_lifecycle.py  test_bundle_ids.py  test_config.py  test_crypto.py  test_dashboard_routes.py  test_device_registry.py  test_events.py  test_hooks_extractor.py  test_identity_guard.py  test_models.py  test_proxy_client.py  test_roles.py  test_runtime_guard.py  test_scheduler.py  test_scheduler_logic.py  test_seeder.py  test_service_diagnostics.py  test_warming.py  test_wda_client.py
(+99 files in other folders)
